[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
confy = "1.0.0"
eframe = "0.31.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = "1.45.1"
